--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,6 +22,12 @@
   <meta property="og:description"        content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}" />
   <meta property="og:image"              content="{% if page.cover %}{{ page.cover }}{% else %}{{ site.cover }}{% endif %}" />
   <meta property="og:site_name"          content="ion-book" />
+  <!-- Metas twitter -->
+  <meta name="twitter:card"              content="summary" />
+  <meta name="twitter:site"              content="@ion_book" />
+  <meta name="twitter:title"             content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}" />
+  <meta name="twitter:description"       content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}" />
+  <meta name="twitter:image"             content="{% if page.cover %}{{ page.cover }}{% else %}{{ site.cover }}{% endif %}g" />
 
   <script src="https://use.fontawesome.com/0fb10d4bd2.js"></script>
   <!-- social share-->
