--- a/_includes/right.html
+++ b/_includes/right.html
@@ -1,19 +1,16 @@
 <div class="col-xs-12 col-md-3">
   <div class="row">
-    
-    <div class="col-xs-12">
-      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-      <!-- IonBookBlog -->
-      <ins class="adsbygoogle"
-          style="display:block"
-          data-ad-client="ca-pub-8943241156434100"
-          data-ad-slot="7344056075"
-          data-ad-format="auto"></ins>
-      <script>
-      (adsbygoogle = window.adsbygoogle || []).push({});
-      </script>
+    <div class="col-xs-12 col-sm-6 col-md-12">
+       <section class="box">
+          <a href="{{ site.book-url }}" target="_blank">
+           <img src="/images/ion-book-wh.png" alt="logo">
+          </a>
+          <p>¿Estas en Bogotá?, tendremos un curso <strong>profesional</strong> sobre Ionic 2 presencial.</p>
+          <a href="http://capitaljuniorcollege.edu.co/aplicaciones/" target="_blank" class="btn btn-success btn-lg btn-block disabled">
+            Registrate
+          </a>
+        </section>
     </div>
-
      <div class="col-xs-12 col-sm-6 col-md-12">
        <section class="box">
           <a href="{{ site.book-url }}" target="_blank">
@@ -71,6 +68,17 @@
       {% endfor %}
       </p>
    </div>
-   
+  <div class="col-xs-12">
+      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+      <!-- IonBookBlog -->
+      <ins class="adsbygoogle"
+          style="display:block"
+          data-ad-client="ca-pub-8943241156434100"
+          data-ad-slot="7344056075"
+          data-ad-format="auto"></ins>
+      <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
+    </div>
  </div>
 </div>
